# printopt

./: .gitignore  README.md  pyproject.toml
src/printopt/: __init__.py  cli.py
src/printopt/core/: gcode.py  materials.py  moonraker.py  plugin.py  printer.py
src/printopt/dashboard/: server.py
src/printopt/dashboard/static/: main.js  style.css
src/printopt/dashboard/templates/: index.html
src/printopt/plugins/flow/: compensator.py  plugin.py  thermal_bridge.py
src/printopt/plugins/thermal/: grid.py  plugin.py
src/printopt/plugins/vibration/: analysis.py  capture.py  plugin.py
tests/: test_cli.py  test_connect.py  test_dashboard.py  test_integration.py  test_profiles.py  test_run.py
tests/core/: test_gcode.py  test_materials.py  test_moonraker.py  test_plugin.py  test_printer.py
tests/plugins/: test_capture.py  test_flow.py  test_thermal.py  test_thermal_bridge.py  test_vibration.py
